# ride

./: README.md  idea.md  requirements.txt
.github/workflows/: ci.yml
architecture/: api.md  architecture-diagram.md  architecture.md  audio-pipeline.md  backend.md  bluetooth.md  data-models.md  delivery-plan.md  deployment.md  future.md  implementation-plan.md  mobile.md  monitoring.md  rtc.md  security.md
architecture/workflows/: README.md  api.md  audio.md  backend.md  bluetooth.md  data-models.md  deployment.md  future.md  mobile.md  monitoring.md  rtc.md  security.md
backend/: README.md  pyproject.toml
backend/migrations/: 001_initial_schema.sql
backend/src/ride_backend/: __init__.py  api.py  audio_bluetooth.py  auth.py  config.py  errors.py  interfaces.py  mobile_flows.py  models.py  ops.py  phase_validation.py  repositories.py  rtc.py  security.py  server.py  services.py  signaling.py  validation.py
backend/tests/: test_api.py  test_audio_bluetooth.py  test_auth.py  test_config_and_errors.py  test_migration_sql.py  test_mobile_flows.py  test_models.py  test_ops_and_phase_validation.py  test_repositories.py  test_rtc.py  test_security.py  test_server_e2e.py  test_services.py  test_signaling.py  test_validation.py
docs/: README.md
infra/: README.md
infra/k8s/: backend-deployment.yaml
infra/monitoring/: prometheus.yml
infra/terraform/: main.tf
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/config/: app_environment.dart
mobile/test/: widget_test.dart
native_audio/: README.md
native_bluetooth/: README.md
(+9 files in other folders)
