[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ride-backend"
version = "0.1.0"
description = "Phase 1 and 2 backend foundation for RiderComm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn>=0.30.0",
	"httpx>=0.27.0",
]

[project.scripts]
ride-backend = "ride_backend.server:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
